i stole code off the internets

--- a/maze.html
+++ b/maze.html
@@ -2,7 +2,7 @@
 <div>
   This is something
 <br/>
-  <canvas id="maze" width="500" height="500"/>
+<canvas id="ctx" width="300" height="300" style="border: thin solid black; background-color: black;"></canvas>
 </div>
 <script type="text/javascript" src='maze.js'></script>
 </html>
